[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclaw"
version = "0.1.0"
description = "OpenClaw-inspired Python agent runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "pyclaw contributors" }]

[project.optional-dependencies]
openai = ["openai>=1.68.0"]
api = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "httpx>=0.27.0"]
mysql = ["pymysql>=1.1.1"]
all = ["openai>=1.68.0", "fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "httpx>=0.27.0", "pymysql>=1.1.1"]

[project.scripts]
pyclaw = "openclaw.__main__:main"
openclaw = "openclaw.__main__:main"
pyclaw-channel-worker = "openclaw.channels.worker_app:main"

[tool.setuptools.packages.find]
include = ["openclaw*"]
